Update contact form layout

--- a/cmd/webserver/templates/contact.gohtml
+++ b/cmd/webserver/templates/contact.gohtml
@@ -17,7 +17,7 @@
 
                 <form action="/contact" method="post" data-recaptcha>
                     <div class="row">
-                        <div class="col-sm-6">
+                        <div class="col-12 col-md-8 col-lg-6">
 
                             <div class="form-group">
                                 <label for="name">Name</label>
@@ -25,7 +25,9 @@
                             </div>
 
                         </div>
-                        <div class="col-sm-6">
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-md-8 col-lg-6">
 
                             <div class="form-group">
                                 <label for="email">Email</label>
