Remove link for now

--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -223,7 +223,7 @@
 
                                                 <h6><a href="https://www.achievementstats.com/index.php?action=games&gameId={{ .App.ID }}" target="_blank">View {{ .App.GetTypeLower }} on Achievement Stats</a></h6>
 
-                                                <h6><a href="https://steamhunters.com/stats/{{ .App.ID }}/achievements" target="_blank">View {{ .App.GetTypeLower }} on Steam Hunters</a></h6>
+                                                {{/*<h6><a href="https://steamhunters.com/stats/{{ .App.ID }}/achievements" target="_blank">View {{ .App.GetTypeLower }} on Steam Hunters</a></h6>*/}}
 
                                             </td>
                                         </tr>
