Fix column header

--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -719,7 +719,7 @@
                                 <table class="table table-hover table-striped table-datatable mb-0" data-order='[[0, "asc"]]'>
                                     <thead class="thead-light">
                                     <tr>
-                                        <th scope="col">Package ID</th>
+                                        <th scope="col">Package</th>
                                         <th scope="col">Billing</th>
                                         <th scope="col">License</th>
                                         <th scope="col">Status</th>
