Update info text

--- a/cmd/webserver/templates/info.gohtml
+++ b/cmd/webserver/templates/info.gohtml
@@ -14,7 +14,7 @@
 
                 <h5>Game DB</h5>
                 <ul>
-                    <li>Game DB has existed in one form or another since 2015.</li>
+                    <li>Game DB has been my hobby since 2015.</li>
                     <li>Game DB is fully open sourced on <a href="https://github.com/gamedb" target="_blank">GitHub</a>.</li>
                     <li>Game DB gets all of its data from <a href="/steam-api">Steam APIs</a>, or <a href="https://github.com/SteamRE/SteamKit" target="_blank" rel="noopener">SteamKit</a>.</li>
                 </ul>
