Fix badge helpers

--- a/cmd/webserver/templates/badge.gohtml
+++ b/cmd/webserver/templates/badge.gohtml
@@ -5,7 +5,7 @@
 
         <div class="jumbotron">
 
-            <img src="{{ .Badge.GetBadgeIcon }}" alt="{{ .Badge.GetName }}">
+            <img src="{{ .Badge.GetIcon }}" alt="{{ .Badge.GetName }}">
 
             {{ template "_social" .Badge }}
 
