--- a/cmd/webserver/templates/badges.gohtml
+++ b/cmd/webserver/templates/badges.gohtml
@@ -44,7 +44,7 @@
                                         <tr data-link="{{ .Badge.GetPath }}">
                                             <td class="img" nowrap="nowrap" data-sort="{{ .Badge.BadgeID }}">
                                                 <div class="icon-name">
-                                                    <div class="icon"><img src="{{ .Badge.GetBadgeIcon }}" alt="{{ .Badge.BadgeName }}"></div>
+                                                    <div class="icon"><img src="{{ .Badge.GetIcon }}" alt="{{ .Badge.BadgeName }}"></div>
                                                     <div class="name">{{ .Badge.BadgeName }}</div>
                                                 </div>
                                             </td>
@@ -80,7 +80,7 @@
                                         <tr data-link="{{ .Badge.GetPath }}">
                                             <td class="img" nowrap="nowrap" data-sort="{{ .Badge.AppID }}">
                                                 <div class="icon-name">
-                                                    <div class="icon"><img src="{{ .Badge.GetBadgeIcon }}" alt="{{ .Badge.BadgeName }}"></div>
+                                                    <div class="icon"><img src="{{ .Badge.GetIcon }}" alt="{{ .Badge.BadgeName }}"></div>
                                                     <div class="name">{{ .Badge.BadgeName }}</div>
                                                 </div>
                                             </td>
