--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -312,7 +312,7 @@
                             <table class="table table-hover table-striped table-counts mb-0" id="badges-table" data-path="/players/{{ .Player.ID }}/badges.json">
                                 <thead class="thead-light">
                                 <tr>
-                                    <th scope="col">App</th>
+                                    <th scope="col">Badge</th>
                                     <th scope="col">Level</th>
                                     <th scope="col">Owners</th>
                                     <th scope="col">Achieved</th>
