--- a/cmd/webserver/assets/sass/_app.scss
+++ b/cmd/webserver/assets/sass/_app.scss
@@ -16,22 +16,18 @@
         }
 
         #tags {
+
             div {
-                position: relative;
-                display: flex;
+                height: 2px;
+                clear: both;
+                @extend .badge-success;
+            }
 
-                a {
-                    margin-bottom: 2px;
-                    text-align: left;
-                    width: auto;
-
-                    small {
-                        color: #212529;
-                        position: absolute;
-                        top: 4px;
-                        right: 4px;
-                    }
-                }
+            a {
+                border-top-left-radius: 0;
+                border-top-right-radius: 0;
+                margin-top: -2px;
+                margin-bottom: 2px;
             }
         }
     }
