--- a/cmd/webserver/assets/sass/_app.scss
+++ b/cmd/webserver/assets/sass/_app.scss
@@ -18,16 +18,25 @@
         #tags {
 
             div {
-                height: 2px;
+                height: 1px;
                 clear: both;
-                @extend .badge-success;
+                background-color: #212529;
+
+                position: relative;
+                z-index: 100;
             }
 
             a {
                 border-top-left-radius: 0;
                 border-top-right-radius: 0;
-                margin-top: -2px;
+                //margin-top: -2px;
                 margin-bottom: 2px;
+            }
+
+            small {
+                font-size: 70%;
+                padding: .25em 0;
+                line-height: 1;
             }
         }
     }
