Update tag width colour

--- a/cmd/webserver/assets/sass/_app.scss
+++ b/cmd/webserver/assets/sass/_app.scss
@@ -20,7 +20,7 @@
             div {
                 height: 1px;
                 clear: both;
-                background-color: #212529;
+                background-color: #28a74542;
 
                 position: relative;
                 z-index: 100;
