--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -112,7 +112,7 @@
             <a class="navbar-brand" href="/">
                 <img src="/assets/img/sa-500x500.png" alt="Game DB">
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-label="Toggle">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
