--- a/cmd/webserver/templates/api.gohtml
+++ b/cmd/webserver/templates/api.gohtml
@@ -59,7 +59,7 @@
                                         <!--suppress HtmlFormInputWithoutLabel -->
                                         <input type="text" class="form-control endpoint" value="{{ $.Base }}{{ $pathKey }}">
                                         <div class="input-group-append">
-                                            <button class="btn btn-success" type="submit">Go</button>
+                                            <button class="btn btn-success" type="submit" aria-label="Go">Go</button>
                                         </div>
                                     </div>
 
