--- a/cmd/webserver/templates/contact.gohtml
+++ b/cmd/webserver/templates/contact.gohtml
@@ -51,7 +51,7 @@
                         </div>
                         <div class="col-sm-12 mt-4">
 
-                            <button type="submit" class="btn btn-success">Send</button>
+                            <button type="submit" class="btn btn-success" aria-label="Send">Send</button>
 
                         </div>
                     </div>
