--- a/cmd/webserver/templates/forgot.gohtml
+++ b/cmd/webserver/templates/forgot.gohtml
@@ -34,7 +34,7 @@
                                         </div>
                                     {{ end }}
 
-                                    <button type="submit" class="btn btn-success">Login</button>
+                                    <button type="submit" class="btn btn-success" aria-label="Login">Login</button>
                                 </form>
 
                             </div>
