--- a/cmd/webserver/templates/home.gohtml
+++ b/cmd/webserver/templates/home.gohtml
@@ -13,7 +13,7 @@
 
         {{/*        {{ if not (.GetCookieFlag "home-message") }}*/}}
         {{/*            <div class="jumbotron">*/}}
-        {{/*                <button type="button" class="close" data-dismiss="alert" data-id="home-message">*/}}
+        {{/*                <button type="button" class="close" data-dismiss="alert" data-id="home-message" aria-label="Close">*/}}
         {{/*                    <span aria-hidden="true">&times;</span>*/}}
         {{/*                </button>*/}}
         {{/*                <p class="mb-0">*/}}
@@ -156,7 +156,7 @@
                                 <input type="search" class="form-control" id="search" name="search" placeholder="Steam URL / ID" required>
                             </div>
 
-                            <button type="submit" class="btn btn-success">Search</button>
+                            <button type="submit" class="btn btn-success" aria-label="Search">Search</button>
                         </form>
                     </div>
 
