--- a/cmd/webserver/templates/players_add.gohtml
+++ b/cmd/webserver/templates/players_add.gohtml
@@ -28,7 +28,7 @@
                             {{/*                            <label for="message">Captcha</label>*/}}
                             {{/*                            <div class="g-recaptcha mb-3" data-sitekey="{{ .RecaptchaPublic }}" data-callback="recaptchaCallback"></div>*/}}
 
-                            <button type="submit" class="btn btn-success">Search</button>
+                            <button type="submit" class="btn btn-success" aria-label="Search">Search</button>
 
                         </div>
                         <div class="col-sm-6">
