--- a/cmd/webserver/templates/admin.gohtml
+++ b/cmd/webserver/templates/admin.gohtml
@@ -123,7 +123,7 @@
                                     <input type="number" name="apps-ts" id="apps-ts" class="form-control">
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-primary">Add to Rabbit</button>
+                            <button type="submit" class="btn btn-primary" aria-label="Add to Rabbit">Add to Rabbit</button>
                         </form>
 
                     </div>
