--- a/cmd/webserver/templates/experience.gohtml
+++ b/cmd/webserver/templates/experience.gohtml
@@ -31,7 +31,7 @@
                     </div>
                     {{/*<div class="col-sm-3">*/}}
                     {{/*<label for="answer">&nbsp;</label>*/}}
-                    {{/*<button type="submit" class="btn btn-success btn-block" id="calculate">Calculate</button>*/}}
+                    {{/*<button type="submit" class="btn btn-success btn-block" id="calculate" aria-label="Calculate">Calculate</button>*/}}
                     {{/*</div>*/}}
                 </div>
 
