--- a/cmd/webserver/templates/sales.gohtml
+++ b/cmd/webserver/templates/sales.gohtml
@@ -31,7 +31,7 @@
 
         {{ if and (.UpcomingSale.Show) (not ($.GetCookieFlag .UpcomingSale.ID)) }}
             <div class="jumbotron">
-                <button type="button" class="close" data-dismiss="alert" data-id="{{ .UpcomingSale.ID }}">
+                <button type="button" class="close" data-dismiss="alert" data-id="{{ .UpcomingSale.ID }}" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
                 <h2 class="mb-0">
