--- a/cmd/webserver/templates/signup.gohtml
+++ b/cmd/webserver/templates/signup.gohtml
@@ -46,7 +46,7 @@
                                         </div>
                                     {{ end }}
 
-                                    <button type="submit" class="btn btn-success">Sign Up</button>
+                                    <button type="submit" class="btn btn-success" aria-label="Sign Up">Sign Up</button>
                                 </form>
 
                             </div>
