--- a/cmd/webserver/templates/steam_api.gohtml
+++ b/cmd/webserver/templates/steam_api.gohtml
@@ -34,7 +34,7 @@
                             </select>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-success">Save</button>
+                    <button type="submit" class="btn btn-success" aria-label="Save">Save</button>
                 </form>
 
             </div>
@@ -93,7 +93,7 @@
                                                         </div>
                                                         <input type="text" class="form-control endpoint" value="https://api.steampowered.com/{{ $interfaceName }}/{{ $methodName }}/v{{ $version }}">
                                                         <div class="input-group-append">
-                                                            <button class="btn btn-success" type="submit">Go</button>
+                                                            <button class="btn btn-success" type="submit" aria-label="Go">Go</button>
                                                         </div>
                                                     </div>
 
